# data-retrieval-in-eo

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  dreo-env.yml  paths.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code_quality.yml  repo2docker.yml
.setup/: Makefile
notebooks/: Ex1.ipynb  Ex2.ipynb  Ex3.ipynb
