[project]
name = "data-retrieval-in-eo"
version = "0.0.0"
description = "Notebooks for the Course 'Data Retrieval in Earth Observation'"
readme = "README.md"
authors = [ { name = "Nikolas Pikall", email = "nikolas.pikall@tuwien.ac.at" } ]
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "ascat>=2.6.5",
  "ismn>=1.5.2",
  "matplotlib>=3.10.8",
  "numba==0.61",
  "numpy==2.1.3",
  "pandas>=2.3.3",
  "pytesmo==0.17",
  "pyyaml>=6.0.3",
  "scipy==1.15.2",
  "xarray>=2025.6.1",
]

[dependency-groups]
dev = [ "ruff>=0.15", "ty>=0.0.16" ]
book = [
  "jupyter>=1.1.1",
  "jupyter-server>=2.17",
  "jupyterlab-myst>=2.4.2",
  "mystmd>=1.6.6",
  "nodeenv>=1.9.1",
]

[tool.uv]
sources.turecipe = { git = "https://gitlab.tuwien.ac.at/cookbooks/templates/tu-cookbook-ci.git" }

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
exclude = []
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma (may conflict with ruff formatter)
  "D203",   # incorrect-blank-line-before-class (conflicts with D211)
  "D213",   # multi-line-summary-second-line (conflicts with D212)
  "ERA001", # commented-out-code
  "PD011",  # pandas-use-of-dot-values
  "T201",   # print used
]
lint.fixable = [ "ALL" ]
lint.unfixable = []
